--- a/docs/abstract.tex
+++ b/docs/abstract.tex
@@ -1,11 +1,25 @@
-\begin{abstract}
-Ta praca opisuje projektowanie i budowę środowiska symulacyjnego dla wielokierunkowej platformy mobilnej, poruszającej się za pomocą kół szwedzkich.
+ \begin{abstractpage}
+	\begin{abstractsection}{polish}
+		Praca opisuje projektowanie i budowę środowiska symulacyjnego dla wielokierunkowej platformy mobilnej, poruszającej się za pomocą kół szwedzkich.
+		Platforma jest bazą mobilną dla dwuramiennego robota Velma. 
+		
+		Celem pracy jest stworzenie możliwie dokładnego modelu symulacyjnego rzeczywistej bazy mobilnej.
+		Model ten będzie służyć do wstępnych badań algorytmów planowania ruchu i sterowania robotem mobilnym.
 
-Platforma jest bazą mobilną dla dwuramiennego robota Velma. 
-Celem pracy jest stworzenie możliwie dokładnego modelu symulacyjnego rzeczywistej bazy mobilnej.
-Model ten ma służyć do wstępnych badań algorytmów planowania ruchu i sterowania robotem mobilnym.
+		Rozpatrzone są tutaj wymagania i problemy przy tworzeniu każdego ze składników środowiska.
+		Na system składają się wirtualne efektory i receptory obsługujące odpowiednią maszynę symulacyjną, a także komponenty wspomagające symulację.
+		Do wykonania zadania użyto programowej struktury ramowej ROS i symulatora Gazebo.
+		
+		W ramach pracy stworzone zostały modele dynamiczne, oraz kinematyczne platformy.
+		Stworzono modele czujników laserowych, czujnika inercji, oraz czujnika enkoderów, a także narzędzia wspomagające testowanie i uruchomienie odpowiednich składników systemu.
+	\end{abstractsection}
 
-Rozpatrzone są tutaj wymagania i problemy przy tworzeniu każdego ze składników środowiska.
-Na system składają się wirtualne efektory i receptory obsługujące odpowiednią maszynę symulacyjną, a także komponenty wspomagające symulację.
-\end{abstract}
- 
+	\begin{abstractsection}{english}
+		%This paper describes creation of simulation environment for omnidirectional platform.
+		
+		%The model of the platform will then be used in testing of motion-planning algorithms to later be used on robot.
+	
+		[TODO]
+		
+	\end{abstractsection}
+\end{abstractpage}
