--- a/docs/main.tex
+++ b/docs/main.tex
@@ -1,9 +1,10 @@
 \documentclass[a4paper,12pt]{report}
-\usepackage[polish]{babel}
+\usepackage[english,polish]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{fullpage}
 \usepackage{polski}
+\usepackage{lipsum}
 \usepackage{graphicx}
 \usepackage{amsmath}   
 \usepackage{nameref}
@@ -28,10 +29,9 @@
 \tableofcontents
 
 \input{about.tex}
-\input{tools.tex}
 \input{robot.tex}
+\input{tools.tex}
 \input{model.tex}
-\input{components.tex}
 \input{implementation.tex}
 \input{tests.tex}
 \input{ending.tex}
