--- a/docs/bibliography.tex
+++ b/docs/bibliography.tex
@@ -2,59 +2,71 @@
 
 % stosowanie_modelu.pdf
 \bibitem{kinematic_modeling}
-P. Muir, C. Neuman ``Kinematic modeling for feedback control of an omnidirectional wheeled mobile robot'', 
+P. Muir, C. Neuman,
+``Kinematic modeling for feedback control of an omnidirectional wheeled mobile robot'', 
 Proceedings, IEEE International Conference in Robotics and Automation, 
 Vol 4. pp. 1772-1778, 1987.
 
 % koła.pdf
 \bibitem{wheels}
-Mihai Olimpiu Tătar, Cătălin Popovici, Dan Mândru, Ioan Ardelean, Alin Pleşa ``Design and development of an autonomous omni-directional mobile robot with Mecanum wheels'',
-Conference: 2014 IEEE International Conference on Automation, Quality and Testing, Robotics (AQTR)
+M. O. Tătar, C. Popovici, D. Mândru, I. Ardelean, A. Pleşa,
+``Design and development of an autonomous omni-directional mobile robot with Mecanum wheels'',
+Conference: 2014 IEEE International Conference on Automation, Quality and Testing, Robotics,
+Cluj-Napoca, 2014, pp. 1-6. DOI: 10.1109/AQTR.2014.6857869.
 
 % paletobot.pdf
 \bibitem{paletobot}
-Matthieu LAMY ``Mechanical development of an automated guided vehicle'',
+M. Lamy, 
+``Mechanical development of an automated guided vehicle'',
 Master of Science Thesis MMK 2016:153 MKN 171,
 KTH Industrial Engineering and Management,
-Machine Design,
-SE-100 44 Sztokholm
+Machine Design.
 
 % matematyka_rolki.pdf
 \bibitem{rollers}
-Anton Gfrerrer ``Geometry and kinematics of the Mecanum wheel'',
-Graz University of Technology, Institute of Geometry, Kopernikusgasse 24, 8010 Graz, Austria,
-Computer Aided Geometric Design 25(9):784-791
+A. Gfrerrer, 
+``Geometry and kinematics of the Mecanum wheel'',
+Computer Aided Geometric Design,
+25(9):784-791.
 
 % silny_robot.pdf
 \bibitem{heavy}
-Li Xie, Christian Scheifele, Weiliang Xu, Karl A. Stol ``Heavy-Duty Omni-Directional Mecanum-Wheeled Robot for Autonomous Navigation'',
-DOI: 10.1109/ICMECH.2015.7083984
+L. Xie, C. Scheifele, W. Xu, K. A. Stol, 
+``Heavy-Duty Omni-Directional Mecanum-Wheeled Robot for Autonomous Navigation'',
+2015 IEEE International Conference on Mechatronics (ICM), Nagoya, 2015, pp. 256-261.
+DOI: 10.1109/ICMECH.2015.7083984.
 
 % hamowanie.pdf
 \bibitem{braking}
-Viktor Kálmán ``On modeling and control of omnidirectional wheels'',
+V. Kálmán, 
+``On modeling and control of omnidirectional wheels'',
 PhD. dissertation, Budapest University of Technology and Economics,
-Department of Control Engineering and Information Technology
+Department of Control Engineering and Information Technology,
+Budapeszt 2013.
 
 % ruchome_osie.pdf
 \bibitem{extra_axis}
-Jae-Bok Song, Kyung-Seok Byun
+J.B. Song, K.S. Byun,
 ``Design and Control of a Four-Wheeled Omnidirectional Mobile Robot with Steerable Omnidirectional Wheels'',
-Journal of Robotic Systems 21(4):193-208, Kwiecień 2004
+Journal of Robotic Systems,
+21(4):193-208, 
+Kwiecień 2004.
 
 % jakiśtam.pdf
 \bibitem{boringbot}
-Ioan Doroftei, Victor Grosu, Veaceslav Spinu
+I. Doroftei, V. Grosu, V. Spinu,
 ``Omnidirectional Mobile Robot – Design and Implementation'',
-Bioinspiration and Robotics Walking and Climbing Robots, Maki K. Habib (Ed.), ISBN: 978-3-902613-15-8, InTech,
-2007
+Bioinspiration and Robotics Walking and Climbing Robots, M. K. Habib (Ed.), 
+ISBN: 978-3-902613-15-8, InTech,
+2007.
 
 % sposoby_modelowania.pdf
 \bibitem{modelling_ways}
-Viktor Kálmán ``Omnidirectional Wheel Simulation --- a Practical Approach'',
-Budapest University of Technology and Economics, 
-Department of Control Engineering and Information Technology,
-2013
+V. Kálmán,
+``Omnidirectional Wheel Simulation --- a Practical Approach'',
+Acta Technica Jaurinensis,
+6(2):73-90,
+2013.
 
 \bibitem{gazebo_website}
 Strona internetowa symulatora Gazebo. \\
@@ -65,7 +77,7 @@ Strona internetowa symulatora V-Rep. \\
 \url{http://coppeliarobotics.com}
 
 \bibitem{ros_website}
-Strona internetowa platformy programistycznej \emph{Robot Operating System}. \\
+Strona internetowa programowej struktury ramowej \emph{Robot Operating System}. \\
 \url{http://www.ros.org}
 
 \bibitem{sdf_website}
@@ -73,15 +85,15 @@ Strona internetowa standardu SDF. \\
 \url{http://sdformat.org/spec}
 
 \bibitem{sick_website}
-Strona internetowa producenta czujników laserowych SICK. \\
+Strona internetowa SICK, producenta czujników laserowych. \\
 \url{https://www.sick.com/de/en/detection-and-ranging-solutions/2d-lidar-sensors/lms1xx/lms100-10000/p/p109841}
 
 \bibitem{adis_website}
-Strona internetowa producenta czujnika inercji. \\
+Strona internetowa sprzedawcy czujnika inercji. \\
 \url{https://www.digikey.com/product-detail/en/analog-devices-inc/ADIS16460AMLZ/ADIS16460AMLZ-ND/5957823}
 
 \bibitem{ode_contact}
-Dokumentacja maszyny ODE z wyjaśnieniem działania kolizji. \\
+Dokumentacja ODE z wyjaśnieniem działania kolizji. \\
 \url{http://ode-wiki.org/wiki/index.php?title=Manual:_Joint_Types_and_Functions#Contact}
 
 \end{thebibliography}
